# civicchain

./: Cargo.toml  LICENSE  README.md
cli_wallet/: Cargo.toml
cli_wallet/src/: main.rs
contracts/simple_storage/: Cargo.toml  lib.rs
docs/: api.md  contracts.md  manual.md
node/: Cargo.toml
node/src/: chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs
pallets/contracts/: Cargo.toml
pallets/contracts/src/: lib.rs  mock.rs  tests.rs
pallets/pow/: Cargo.toml
pallets/pow/src/: lib.rs  mock.rs  tests.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
web_wallet/: package.json
web_wallet/src/: App.css  App.js
