[workspace]
members = [
    "node",
    "pallets/pow",
    "pallets/contracts",
    "cli_wallet",
    "runtime",
]
resolver = "2"

[workspace.package]
authors = ["Beltrano"]
edition = "2025"
repository = "https://github.com/civicchain/civicchain"

[workspace.dependencies]
# Substrate dependencies
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
substrate-frame-benchmarking = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
substrate-frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
substrate-test-runtime-client = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
substrate-frame-cli = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }

# Substrate primitives
sp-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-block-builder = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-blockchain = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-consensus = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-consensus-pow = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-inherents = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-keyring = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-offchain = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-session = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-timestamp = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-version = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }

# Substrate pallets
frame-benchmarking = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
frame-executive = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
frame-system = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
frame-system-benchmarking = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
pallet-balances = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
pallet-contracts = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
pallet-contracts-primitives = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
pallet-sudo = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
pallet-collective = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
pallet-democracy = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }

# Substrate client dependencies
sc-basic-authorship = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sc-cli = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sc-client-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sc-consensus = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sc-consensus-pow = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sc-executor = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sc-network = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sc-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sc-service = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sc-telemetry = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }

# Other dependencies
log = "0.4.17"
clap = { version = "4.2.5", features = ["derive"] }
futures = "0.3.28"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
jsonrpsee = { version = "0.16.2", features = ["server"] }
parity-scale-codec = { version = "3.2.2", default-features = false, features = ["derive"] }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
rand = "0.8.5"
smallvec = "1.10.0"
parking_lot = "0.12.1"
hex = "0.4.3"
sha2 = "0.10.6"
sha3 = "0.10.6"
yesha256 = "0.2.0" # Atualizado para versão mais recente que suporta Yespower-R16
merkle-light = "0.4.0" # Para implementação de Merkle Trees (GHOST, FlyClient)
zeroize = "1.5.7" # Para segurança de dados sensíveis
